// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template $class 1`] = `
<body>
  <div
    class="aaa foo"
  >
    bbb
  </div>
</body>
`;

exports[`template attributes 1`] = `
<body>
  <input
    class="aaa"
    data-foo="bar"
    type="checkbox"
  />
</body>
`;

exports[`template create child elements 1`] = `
<body>
  <div
    class="hi"
  >
    hello
  </div>
  <div
    class="foo"
  >
    <div
      class="barBaz"
    >
      123
    </div>
  </div>
  <div>
    345
  </div>
  <section />
  yes
</body>
`;

exports[`template create child span element 1`] = `
<body>
  <span
    class="hi"
  >
    hello
  </span>
  <div
    class="foo"
  >
    <span
      class="bar"
    >
      234
    </span>
  </div>
</body>
`;

exports[`template create root element 1`] = `
<body>
  <div
    class="root"
  >
    hello
     world
  </div>
</body>
`;

exports[`template multiple array 1`] = `
<body>
  <div
    class="root"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
    <div>
      3
    </div>
    <div>
      4
    </div>
    <div>
      5
    </div>
    <div>
      6
    </div>
    <div>
      7
    </div>
  </div>
</body>
`;

exports[`template not create null or undefined 1`] = `
<body>
  <div
    class="root"
  />
</body>
`;

exports[`template not show $if 1`] = `
<body>
  <!---->
  <!---->
  <div
    class="aaa"
  >
    bbb
  </div>
</body>
`;

exports[`template simple array 1`] = `
<body>
  <div
    class="root"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
    <div>
      3
    </div>
    <div>
      4
    </div>
  </div>
</body>
`;
